syntax = "proto3";
package proto;
option go_package = "./messaging/proto";

message CallerInfo{
    string address = 1;
}

message Message {
    string from = 1;
    string to = 2;
    int32 type = 3;
    // topic is the destination of the message, it is used to route the message to the correct handler.
    string topic = 4;
    repeated bytes payload = 5;
}

message MessageSummary {
    int64 sent_bytes = 1;
}

service MessageCenter {
    // The clients call this method to build a event channel from client to server.
    rpc sendEvents(Message) returns (stream Message);
    rpc sendCommands(Message) returns (stream Message);
}